force-app/main/default/objects/Opportunity/fields/Contract_Duration_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_In_Months__c</fullName>
    <label>Contract Duration In Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>