force-app/main/default/objects/Opportunity/fields/Contract_Signedby__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signedby__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Signedby</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Contact is not Related to this Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>