force-app/main/default/objects/Opportunity/fields/Flow_Finished__c.field-meta.xml
<CustomField>
    <fullName>Flow_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Finished</label>
    <type>Checkbox</type>
</CustomField>