force-app/main/default/objects/Opportunity/fields/Product_Counter__c.field-meta.xml
<CustomField>
    <fullName>Product_Counter__c</fullName>
    <label>Product Counter</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>