force-app/main/default/objects/Opportunity/recordTypes/Basic_Contract.recordType-meta.xml
<RecordType>
    <fullName>Basic_Contract</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Basic Contract</label>
</RecordType>