force-app/main/default/objects/Opportunity/recordTypes/Releye.recordType-meta.xml
<RecordType>
    <fullName>Releye</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Releye</label>
</RecordType>