force-app/main/default/objects/Opportunity/recordTypes/Seasonal_Contract.recordType-meta.xml
<RecordType>
    <fullName>Seasonal_Contract</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Seasonal Contract</label>
</RecordType>