force-app/main/default/objects/Opportunity/validationRules/Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract</fullName>
    <active>true</active>
    <errorConditionFormula>Contract_Duration_In_Months__c &gt;12 ||  Contract_Duration_In_Months__c&lt;1</errorConditionFormula>
    <errorMessage>Duration has to be at least 1 month and maximum 12 months</errorMessage>
</ValidationRule>