force-app/main/default/objects/Opportunity/validationRules/Lock_Closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Closed_won</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Flow_Finished__c) = True</errorConditionFormula>
    <errorMessage>Cannot Update Closed Won Opportunity</errorMessage>
</ValidationRule>