force-app/main/default/objects/Opportunity/validationRules/Product_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Product_Counter__c &lt;1,TEXT(StageName)=&apos;Closed Won&apos;)</errorConditionFormula>
    <errorMessage>Cannot Closed Opportunity with no products</errorMessage>
</ValidationRule>